add schedule section

--- a/index.html
+++ b/index.html
@@ -333,6 +333,287 @@
 			</div><!--//pricing-->
 		</div>
   </section>
+  <div class="container">
+		<hr>
+	</div>
+	
+	<section id="schedule-section" class="schedule-section section">
+		<div class="container">
+			<h3 class="section-heading text-center mb-5">Schedule</h3>
+			
+			<!-- Nav tabs -->
+			<ul class="schedule-nav nav nav-pills nav-fill" id="myTab" role="tablist">
+				<li class="nav-item mr-2">
+					<a class="nav-link active" id="tab-1" data-toggle="tab" href="#tab-1-content" role="tab" aria-controls="tab-1-content" aria-selected="true">
+						<span class="heading">Day 1</span>
+						<span class="meta">(Fri 07, May)</span>
+					</a>
+				</li>
+				<li class="nav-item mr-2">
+					<a class="nav-link" id="tab-2" data-toggle="tab" href="#tab-2-content" role="tab" aria-controls="tab-2-content" aria-selected="false">
+						<span class="heading">Day 2</span>
+						<span class="meta">(Sat 08, May)</span>
+					</a>
+				</li>
+
+			</ul>
+			
+			<!-- Tab panes -->
+			<div class="schedule-tab-content tab-content">
+				<div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
+          <div class="item item-other">
+						<div class="meta">
+							<h4 class="time mb-3">10:00 - 10:10</h4>
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Welcoming Session</h3>
+              <div class="location mb-3"></div>
+							<div class="desc mb-3"></div>
+						</div><!--//content-->
+					</div><!--//item-->
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">10:20 - 11:00</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jose Valim</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">KEYNOTE: ...</h3>
+              <div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>
+              <br><br>
+						</div><!--//content-->
+					</div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">11:10 - 11:40</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-2.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">John Invictus</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Getting started with Graphql with Absinthe</h3>
+              <div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>
+              <br><br>
+						</div><!--//content-->
+          </div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">11:50 - 12:20</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-3.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Peter Ullrich</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Architecture Patterns applied to Phoenix Projects</h3>
+              <div class="location mb-3"></div>
+              <div class="desc mb-3">Talk description</div>
+              <br><br>
+						</div><!--//content-->
+					</div><!--//item-->          
+					<div class="item item-other">
+						<div class="meta">
+							<h4 class="time mb-3">12:20 - 12:50</h4>
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Coffee Break</h3>
+              <div class="location mb-3"></div>
+							<div class="desc mb-3"></div>
+						</div><!--//content-->
+					</div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">12:50 - 13:20</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-4.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Tymon Tobolski</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">Only possible with Elixir - Ubots Case Study</h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>
+              <br><br>
+						</div><!--//content-->
+					</div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">13:30 - 14:30</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-5.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Linda & Jackie</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">Talk Title </h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>
+              <br><br>
+						</div><!--//content-->
+					</div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">14:40 - 15:10</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-6.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Elixir Outlaws</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">Podcast</h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>
+              <br><br>
+						</div><!--//content-->
+					</div><!--//item-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">15:30 - 16:10</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-7.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">KEYNOTE: ..</h3>
+							<div class="location mb-3"></div>
+              <div class="desc mb-3">Talk's summary goes here.</div>	
+              <br><br>					
+            </div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-other">
+						<div class="meta">
+							<h4 class="time mb-3">18:00 - 24:00</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">Dinner &amp; After-party</h3>
+							<div class="location mb-3"><i class="fas fa-map-marker-alt mr-2"></i>Bar Lorem Ipsum</div>
+							<div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
+						</div><!--//content-->
+					</div><!--//item-->
+					
+				</div><!--//tab-1-content-->
+				<div class="tab-pane no-timeline" id="tab-2-content" role="tabpanel" aria-labelledby="tab-2">
+          <div class="item item-other">
+						<div class="meta">
+							<h4 class="time mb-3">10:00 - 10:10</h4>
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Welcoming Session</h3>
+              <div class="location mb-3"></div>
+							<div class="desc"></div>
+						</div><!--//content-->
+					</div><!--//item-->
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">10:20 - 10:40</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jeffrey Matthias</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Effective Elixir Testing Coverage</h3>
+              <div class="location mb-3"></div>
+							<div class="desc">Talk's summary goes here.</div>
+						</div><!--//content-->
+          </div><!--//item-->
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">10:40 - 12:00</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Imo Yang</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Putting it together - Elixir + gRPC</h3>
+              <div class="location mb-3"></div>
+							<div class="desc">Talk's summary goes here.</div>
+						</div><!--//content-->
+          </div><!--//item-->      
+          <div class="item item-other">
+						<div class="meta">
+							<h4 class="time mb-3">12:00 - 12:30</h4>
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Coffee Break</h3>
+              <div class="location mb-3"></div>
+							<div class="desc"></div>
+						</div><!--//content-->
+          </div><!--//item-->      
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">12:30 - 13:50</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Nikola Begedin</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Actual E2E Testing with Cypress, Vue and Elixir/Phoenix, using Ecto sandbox</h3>
+              <div class="location mb-3"></div>
+							<div class="desc">Talk's summary goes here.</div>
+						</div><!--//content-->
+          </div><!--//item-->                        
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">14:00 - 15:20</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">Training: ...</h3>
+              <div class="location mb-3"></div>
+							<div class="desc">Talk's summary goes here.</div>
+						</div><!--//content-->
+          </div><!--//item--> 
+          <div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">15:40 - 16:20</h4>
+							<div class="profile">
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
+								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Franchesco & Simon Thompson</a></div>
+							</div><!--//profile-->
+						</div><!--//meta-->
+						<div class="content">
+              <h3 class="title mb-3">KEYNOTE: ...</h3>
+              <div class="location mb-3"></div>
+							<div class="desc">Talk's summary goes here.</div>
+						</div><!--//content-->
+          </div><!--//item-->                                            
+        </div><!--//tab-2-content-->
+        <div class="item item-other">
+          <div class="meta">
+            <h4 class="time mb-3">16:30 - 17:50</h4>
+          </div><!--//meta-->
+          <div class="content">
+            <h3 class="title mb-3">Closing Remarks</h3>
+            <div class="location mb-3"></div>
+            <div class="desc"></div>
+          </div><!--//content-->
+        </div><!--//item-->
+			</div><!--//schedule-tab-content-->
+		</div><!--//container-->
+	</section><!--//schedule-section-->
+  
+	<section id="about-section" class="about-section section">
+		<div class="container">
+			<h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
+			<div class="section-intro single-col-max mx-auto mb-4">
+				ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br> <br>
+				This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
+				<br>
+				<br>
+				ElixirConfAfr 2021 will be held at Greenwich Meridian Time (GMT) to suit attendees all over Africa for a two-day event filled with display of talks and workshops from amazing speakers and teachers.
 
 
 	<section id="sponsors-section" class="sponsors-section section">
