--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li> -->
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
 
@@ -253,7 +253,7 @@
       </div><!--//col-->
     </div>
   </div>
-	<div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="speakers.html" target="_blank">All Speakers</a></div>
+	<!-- <div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="speakers.html" target="_blank">All Speakers</a></div> -->
 
 </section>
 
