--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="#">Speakers</a></li> -->
 							<!-- <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li> -->
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
 
