add missing descriptions to talks

--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-              <h3 class="title mb-3">KEYNOTE: ...</h3>
+              <h3 class="title mb-3">Elixir v1.12 updates and Q&A</h3>
               <div class="location mb-3"></div>
-              <div class="desc mb-3">Talk's summary goes here.</div>
+              <div class="desc mb-3">updates on Elixir v1.12 with plenty of time for Q&A.</div>
               <br><br>
 						</div><!--//content-->
 					</div><!--//item-->
@@ -435,9 +435,9 @@
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-              <h3 class="title mb-3">Talk Title</h3>
+              <h3 class="title mb-3">PubSub in Liveview</h3>
               <div class="location mb-3"></div>
-              <div class="desc mb-3">Talk description</div>
+              <div class="desc mb-3"></div>
               <br><br>
 						</div><!--//content-->
 					</div><!--//item-->                      
@@ -480,7 +480,7 @@
 						<div class="meta">
 							<h4 class="time mb-3">13:30 - 14:30</h4>
 							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/wayua.jpg" alt=""></a>
+								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/jackie.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jackie Kaunda</a></div>
               </div><!--//profile-->
 							<div class="profile">
@@ -491,7 +491,9 @@
 						<div class="content">
 							<h3 class="title mb-3">Building a simple billing system using Genservers </h3>
 							<div class="location mb-3"></div>
-              <div class="desc mb-3">Talk's summary goes here.</div>
+              <div class="desc mb-3">
+                This talk is about one of our ongoing project which allows us to pay some of our bills automatically at the end of each month.
+              </div>
               <br><br><br><br><br><br>
 						</div><!--//content-->
 					</div><!--//item-->
@@ -504,9 +506,9 @@
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Podcast</h3>
+							<h3 class="title mb-3">Live Podcast by Elixir Outlaws</h3>
 							<div class="location mb-3"></div>
-              <div class="desc mb-3">Talk's summary goes here.</div>
+              <div class="desc mb-3"></div>
               <br><br>
 						</div><!--//content-->
 					</div><!--//item-->
@@ -553,7 +555,7 @@
 					</div><!--//item-->
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">10:20 - 10:40</h4>
+							<h4 class="time mb-3">10:20 - 10:50</h4>
 							<div class="profile">
 								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Jeffrey_Matthias.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Jeffrey Matthias</a></div>
@@ -568,7 +570,7 @@
           </div><!--//item-->
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">10:40 - 12:00</h4>
+							<h4 class="time mb-3">11:00 - 12:30</h4>
 							<div class="profile">
 								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Imo_Inyang.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Imo Yang</a></div>
@@ -583,7 +585,7 @@
           </div><!--//item-->      
           <div class="item item-other">
 						<div class="meta">
-							<h4 class="time mb-3">12:00 - 12:30</h4>
+							<h4 class="time mb-3">12:30 - 13:00</h4>
 						</div><!--//meta-->
 						<div class="content">
               <h3 class="title mb-3">Coffee Break</h3>
@@ -593,7 +595,7 @@
           </div><!--//item-->      
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">12:30 - 13:50</h4>
+							<h4 class="time mb-3">13:00 - 14:30</h4>
 							<div class="profile">
 								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/Nikola_Begedin(1).jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Nikola Begedin</a></div>
@@ -608,39 +610,25 @@
               <br><br><br>
 						</div><!--//content-->
           </div><!--//item-->                        
+
           <div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">14:00 - 15:20</h4>
+							<h4 class="time mb-3">15:00 - 15:30</h4>
 							<div class="profile">
 								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/bruce-brown-black.jpg" alt=""></a>
 								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
 							</div><!--//profile-->
 						</div><!--//meta-->
 						<div class="content">
-              <h3 class="title mb-3">Training: ...</h3>
+              <h3 class="title mb-3">Exploring Practices of Growth and Decline</h3>
               <div class="location mb-3"></div>
-              <div class="desc">Talk's summary goes here.</div>
-              <br><br><br>
-						</div><!--//content-->
-          </div><!--//item--> 
-          <div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">15:40 - 16:20</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="/assets/images/speakers/bruce-brown-black.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Bruce Tate</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-              <h3 class="title mb-3">KEYNOTE: ...</h3>
-              <div class="location mb-3"></div>
-              <div class="desc">Talk's summary goes here.</div>
+              <div class="desc">Software development is a wonderfully conflicted mix of art and science. This keynote will examine leverage. Specifically, we'll dive into practices, processes and code organization that lead to compounded growth, or decay, of development organizations.</div>
               <br><br><br>
 						</div><!--//content-->
           </div><!--//item-->      
           <div class="item item-other">
             <div class="meta">
-              <h4 class="time mb-3">16:20 - 16:30</h4>
+              <h4 class="time mb-3">15:30 - 15:40</h4>
             </div><!--//meta-->
             <div class="content">
               <h3 class="title mb-3">Closing Remarks</h3>
@@ -650,7 +638,7 @@
           </div><!--//item-->
           <div class="item item-other">
 						<div class="meta">
-							<h4 class="time mb-3">16:30 - 17:30</h4>
+							<h4 class="time mb-3">15:40 - 16:40</h4>
 						</div><!--//meta-->
 						<div class="content">
 							<h3 class="title mb-3">Dinner &amp; After-party</h3>
